<resources>
    <string name="app_name">ZJU Connect</string>
    <string name="default_server" translatable="false">rvpn.zju.edu.cn</string>
    <string name="default_dns_server" translatable="false">10.10.0.21</string>

    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous</string>

    <string name="started">Start!</string>
    <string name="stopped">Stop!</string>
    <string name="ask_permission">Please grant permission!</string>
    <string name="login_failed">Login failed!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input_username">Input username</string>
    <string name="input_password">Input password</string>
    <string name="action_about">About</string>
    <string name="about_fragment_label">About</string>
    <string name="icon">Icon</string>
    <string name="connected">Connected</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="show_advanced_settings">Show Advanced Settings</string>
    <string name="server">Server</string>
    <string name="dns_server">Dns Server</string>
    <string name="input_server">Input server</string>
    <string name="input_dns_server">Input dns server</string>
    <string name="reset">Reset</string>
</resources>