<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="414dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameTextView">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/input_username"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <CheckBox
                android:id="@+id/autoConnectCheckBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/auto_connect" />

            <CheckBox
                android:id="@+id/advancedVisibleCheckBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/show_advanced_settings" />

            <LinearLayout
                android:id="@+id/advancedSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

            <TextView
                android:id="@+id/server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/resetServerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"/>

                <EditText
                    android:id="@+id/serverEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="username"
                    android:ems="10"
                    android:hint="@string/input_server"
                    android:inputType="text"
                    android:textColorHint="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/dns_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dns_server"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/resetDnsServerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"/>

                <EditText
                    android:id="@+id/dns_serverEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/input_dns_server"
                    android:inputType="text"
                    android:textColorHint="@color/black" />

            </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>